--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -71,8 +71,10 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-file-picker')
     compile project(':react-native-linear-gradient')
     compile project(':react-native-firebase')
+    compile project(':react-native-fs')
     implementation "com.google.firebase:firebase-core:16.0.1"
     implementation "com.google.firebase:firebase-storage:15.0.2"
     implementation "com.google.firebase:firebase-auth:16.0.2"
