--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "dependencies": {
     "react": "16.3.1",
     "react-native": "0.55.4",
+    "react-native-file-picker": "0.0.11",
     "react-native-firebase": "^4.1.0",
+    "react-native-fs": "^2.12.1",
     "react-native-linear-gradient": "^2.4.0",
     "react-navigation": "2.2.5",
     "react-navigation-redux-helpers": "^1.0.7",
