--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "react-native-file-picker": "0.0.11",
     "react-native-firebase": "^4.1.0",
     "react-native-fs": "^2.12.1",
-
+    "react-native-fbsdk": "0.8.0",
+    "react-native-html-to-pdf": "0.6.0",
+    "react-native-pdf": "5.0.8",
+    "rn-fetch-blob": "0.10.13",
     "react-native-linear-gradient": "^2.4.0",
     "react-navigation": "2.2.5",
     "react-navigation-redux-helpers": "^1.0.7",
