--- a/android/build.gradle
+++ b/android/build.gradle
@@ -2,6 +2,11 @@
 
 buildscript {
     repositories {
+        mavenLocal()
+        maven {
+            // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
+             url 'https://maven.google.com'
+        }
         jcenter()
         google()
     }
@@ -16,12 +21,13 @@ buildscript {
 allprojects {
     repositories {
         mavenLocal()
+         maven {
+            // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
+             url "$rootDir/../node_modules/react-native/android"
+        }
         google()
         jcenter()
-        maven {
-            // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
-            url "$rootDir/../node_modules/react-native/android"
-        }
+       
     }
 }
 
