--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-navigation": "2.2.5",
     "react-navigation-redux-helpers": "^1.0.7",
     "react-redux": "^5.0.6",
+    "react-native-share": "1.1.3",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0"
   },
